# netops-git-push-only

./: .gitignore  .pre-commit-config.yaml  README.md  first-time-setup.sh  netops  netops.py  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml  precommit.yml
