[tool.poetry]
name = "netops-git-push-only"
version = "0.1.0"
description = ""
authors = ["hud-turn", "Zevaryx <zevaryx@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4"
paramiko = "^3.4.0"
python-dotenv = "^1.0.1"
PyGithub = "^2.1.1"

[tool.poetry.group.dev.dependencies]
black = "^24.1.0"
pre-commit = "^3.6.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
