[tool.poetry]
name = "netops-git-push-only"
version = "0.1.0"
description = ""
authors = ["hud-turn", "Zevaryx <zevaryx@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4"
paramiko = "^3.4.0"
python-dotenv = "^1.0.1"
PyGithub = "^2.1.1"
setuptools = "^80.9.0"
virtualenv = "^20.34.0"
cryptography = "^45.0.6"
requests = "^2.32.5"
urllib3 = "^2.6.3"
certifi = "^2025.8.3"
idna = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pre-commit = "^3.6.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
